Changes after KWord-1.4-beta1
=============================
- Fixed crash when editing a cell on loading (#104982).
- Many footnotes bugs have been solved (#85148,, #72506, #57298, #62360, #84678).
- Show the content of the footnote/endnote in the status barwhen the mouse cursor is placed over a footnote/endnote reference (part of feature #48794).
- Added an apply button to the frame property and the resize column dialog.
- Added a reset button to the resize column dialog.
- Resize column dialog: the maximum width for a cell is the width of the table's parent frame if the table is floating.
- All KDoubleNumInputs have been replaced KoUnitDoubleSpinBoxes.
- Disable the formula toolbar from start if no formula frame is activated.

Changes between KWord-1.3.x and KWord-1.4-beta1
===============================================
See ../changes-1.4-beta1

Changes between KWord 1.3.2 and 1.3.3
=====================================
- Fix the 3 style menus for any translation (#61007)
- OASIS: proper loading/saving of inline tables
- Disable creation of non-inline tables
- OASIS: default tab width

Changes after KWord-1.3
=======================
- Reorganized and simplified GUI of the configuration dialog
- Support for "protect content" in all types of framesets
- Support for different run-around-gaps on every side of the frame
- Use kspell2
- Copy/paste between kword/kpresenter
- Add statistic variable

Changes between KWord-1.3-rc and KWord-1.3
==========================================
- Fixed swapped resize mouse cursors with Qt-3.1.2
- Fixed table column resizing (avoid overlapping columns)

Changes after KWord 1.3 rc (1.2.94)
===================================
- Fixed crash in table operations (#66349)
- Fixed crash in table iterator
- Fixed "edit frameset" for tables in doc structure panel (#67084)
- Save "no underline" explicitely if the paraglayout says "underline" but the
  user removed the underline (#67735)
- Fixed successive image DnD